--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.0.18",
     "@astrojs/mdx": "^0.17.2",
+    "@astrojs/netlify": "^2.1.3",
     "@astrojs/rss": "^2.1.1",
-    "@astrojs/sitemap": "^1.1.0"
+    "@astrojs/sitemap": "^1.1.0",
+    "@astrojs/tailwind": "^3.0.1",
+    "astro": "^2.0.18",
+    "tailwindcss": "^3.2.7"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.4",
+    "prettier-plugin-tailwindcss": "^0.2.4"
   }
 }
